改之前登录，图片bug

--- a/Blackboard/app/src/main/AndroidManifest.xml
+++ b/Blackboard/app/src/main/AndroidManifest.xml
@@ -11,11 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Blackboard">
-
-        //要改回LoginActivity首先展示
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".AddActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SearchActivity"
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".MineActivity"
             android:exported="true" />
